Modificación del footer

--- a/views/nosotros.pug
+++ b/views/nosotros.pug
@@ -60,5 +60,5 @@ block content
   footer
   .container
     div(align='center')
-      | Desarrollado por 
-      a(href='https://www.nubecolectiva.com' target='_blank') Nube Colectiva
+      | Desarrollado por
+      a(href='https://www.betacode.cl' target='_blank') Beta Code Servicios Digitales
