--- a/views/servicios.pug
+++ b/views/servicios.pug
@@ -69,4 +69,4 @@ block content
   .container
     div(align='center')
       | Desarrollado por 
-      a(href='https://www.nubecolectiva.com' target='_blank') Nube Colectiva
+      a(href='https://www.betacode.cl' target='_blank') Beta Code Servicios Digitales 
